---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-51,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-51 Defs(
                Defs {
                    tags: [
                        Index(2147483648),
                    ],
                    regions: [
                        @17-24,
                    ],
                    space_before: [
                        Slice(start = 0, length = 0),
                    ],
                    space_after: [
                        Slice(start = 0, length = 0),
                    ],
                    spaces: [],
                    type_defs: [],
                    value_defs: [
                        Body(
                            @11-14 Identifier {
                                ident: "msg",
                            },
                            @17-24 Str(
                                PlainLine(
                                    "hello",
                                ),
                            ),
                        ),
                    ],
                },
                @11-51 Apply(
                    @11-51 Var {
                        module_name: "Task",
                        ident: "await",
                    },
                    [
                        @29-41 Apply(
                            @29-41 Var {
                                module_name: "",
                                ident: "foo",
                            },
                            [
                                @38-41 Var {
                                    module_name: "",
                                    ident: "msg",
                                },
                            ],
                            Space,
                        ),
                        @11-51 Closure(
                            [
                                @29-30 Identifier {
                                    ident: "x",
                                },
                            ],
                            @46-51 Apply(
                                @46-49 Var {
                                    module_name: "",
                                    ident: "bar",
                                },
                                [
                                    @50-51 Var {
                                        module_name: "",
                                        ident: "x",
                                    },
                                ],
                                Space,
                            ),
                        ),
                    ],
                    BangSuffix,
                ),
            ),
        ),
    ],
}
